# pdf-compare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  create_test_pdfs.py  install.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_suite.bat
docs/: examples.md  installation.md  testing.md
examples/: example_usage.py
src/pdf_compare/: __init__.py  cli.py  comparator.py  differ.py  renderer.py  reporter.py  stats.py
tests/: test_comparator.py
